@@ -1,3 +1,8 @@
+2006-11-02  Tim Waugh  <twaugh@redhat.com>
+
+	* cupsppd.c (Option_getChoices): Handle enum values already set
+	outside the range (bug #213136).
+
 2006-10-24  Tim Waugh  <twaugh@redhat.com>
 
 	* cupsmodule.h: Removed bit-rotten CUPS 1.1.x compatibility code.
